# OglRenderer

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.c
liminal_engine/: CMakeLists.txt  README.md
liminal_engine/include/: liminal.h
liminal_engine/src/: liminal.c
liminal_engine/src/renderer/: renderer.c  renderer.h
